--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,19 +7,17 @@ services:
       - "8001:8001"
     depends_on:
       - postgres
-      - redis
-      - line-provider
+      - redis-bet
     environment:
       - APP_NAME=Bet Maker Service
       - DEBUG=true
-      - DATABASE_URL=postgresql+asyncpg://betmaker:betmaker@postgres:5432/betmaker
-      - REDIS_URL=redis://redis:6379
-      - LINE_PROVIDER_URL=http://line-provider:8000
+      - DATABASE_URL=postgresql+asyncpg://betmaker:betmaker@127.0.0.1:5432/betmaker
+      - REDIS_URL=redis://127.0.0.1:6379
+      - LINE_PROVIDER_URL=http://127.0.0.1:8000
       - LINE_PROVIDER_TIMEOUT=5
       - MIN_BET_AMOUNT=1.0
       - MAX_BET_AMOUNT=100000.0
-    networks:
-      - betting-network
+    network_mode: host
     volumes:
       - .:/app
 
@@ -33,40 +31,24 @@ services:
       - POSTGRES_PASSWORD=betmaker
     volumes:
       - postgres_data:/var/lib/postgresql/data
-    networks:
-      - betting-network
     healthcheck:
       test: [ "CMD-SHELL", "pg_isready -U betmaker" ]
       interval: 5s
       timeout: 5s
       retries: 5
 
-  redis:
+  redis-bet:
     image: redis:6
-    command: redis-server --port 6379
     ports:
       - "6379:6379"
     volumes:
       - redis_data:/data
-    networks:
-      - betting-network
     healthcheck:
-      test: [ "CMD", "redis-cli", "-p", "6378", "ping" ]
+      test: [ "CMD", "redis-cli", "-p", "6379", "ping" ]
       interval: 5s
       timeout: 5s
       retries: 5
 
-  line-provider:
-    image: line-provider:latest  # Предполагается, что у вас есть этот образ
-    ports:
-      - "8000:8000"
-    networks:
-      - betting-network
-
 volumes:
   postgres_data:
   redis_data:
-
-networks:
-  betting-network:
-    driver: bridge
